--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,7 +181,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero .hero-container {
   position: absolute;
   bottom: 0;
-  top: 10%;
+  top: 0;
   left: 0;
   right: 0;
   display: flex;
@@ -252,10 +252,9 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 3.5rem;
   display: inline-block;
   background-color: none;
-  border-top: 1px solid #eee;
+  border-top: 0px solid #eee;
   border-bottom: 1px solid #eee;
   margin: 10px;
-  
 }
 .stopwatch span {
   font-weight: bold;
