--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,12 +249,12 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 .stopwatch {
   color: white;
-  font-size: 3.5rem;
+  font-size: 3rem;
   display: inline-block;
   background-color: none;
   border-top: 0px solid #eee;
   border-bottom: 1px solid #eee;
-  margin: 10px;
+  margin-bottom: 10px;
 }
 .stopwatch span {
   font-weight: bold;
@@ -263,4 +263,13 @@ h1, h2, h3, h4, h5, h6 {
 .stopwatch a {
   padding-right: 5px;
   text-decoration: none;
+}
+.abintervall {
+  color: white;
+  font-size: 3rem;
+  display: inline-block;
+  background-color: none;
+  border-top: 0px solid #eee;
+  border-bottom: 0px solid #eee;
+  margin-bottom: 10px;
 }
