--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,9 +163,6 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/sport1.jpg") top right;
-  background-size: cover;
-  position: relative;
 }
 
 #hero:before {
@@ -252,11 +249,12 @@ h1, h2, h3, h4, h5, h6 {
 .stopwatch {
   color: white;
   font-size: 3rem;
+  font-family: "Lucida Console", Courier, monospace;
   display: inline-block;
   background-color: none;
   border-top: 0px solid #eee;
   border-bottom: 1px solid #eee;
-  margin-bottom: 10px;
+  margin-bottom: 1px;
 }
 .stopwatch span {
   font-weight: bold;
